RESOLVED FIXED 105432
transition-delay and transition-duration return incorrect values when querying using the computed style.
https://bugs.webkit.org/show_bug.cgi?id=105432
Summary transition-delay and transition-duration return incorrect values when queryin...
Alexis Menard (darktears)
Reported 2012-12-19 06:30:49 PST
style.transitionDelay = "10ms"; returns correctly 10ms when using style.transitionDelay to get the value but when querying the transition-delay value using the computed style the following value is returned : 0.009999999776482582s. It is inaccurate and goes against the spec and what other UAs do, it should be 0.01s.
Attachments
Patch (9.11 KB, patch)
2013-01-08 04:37 PST, Alexis Menard (darktears)
no flags
Alexis Menard (darktears)
Comment 1 2013-01-08 04:37:58 PST
WebKit Review Bot
Comment 2 2013-01-08 10:09:24 PST
Comment on attachment 181684 [details] Patch Clearing flags on attachment: 181684 Committed r139070: <http://trac.webkit.org/changeset/139070>
WebKit Review Bot
Comment 3 2013-01-08 10:09:27 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.